--- a/ChatApp/chat/templates/chat/LoginPage.html
+++ b/ChatApp/chat/templates/chat/LoginPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% load socialaccount %}
 <html>
 <body>
     <form method ="post">
@@ -7,5 +7,7 @@
         <br>
         <button type = "submit">Login</button>
     </form>
+    <h3>Or</h3>
+    <a href="{% provider_login_url 'google' %}">Login With Google</a>
 </body>
 </html>
