--- a/ChatApp/chat/templates/chat/chatPage.html
+++ b/ChatApp/chat/templates/chat/chatPage.html
@@ -4,7 +4,8 @@
     <center><h1>Hello , Welcome to my chat site ! {{request.user}}</h1></center>
     <br>
     {% if request.user.is_authenticated  %}
-    <center> Logout the chat Page <a href = "{% url 'logout-user' %}">Logout</a></center>
+    <center><img src="{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="{{request.user}}'s profile photo"></center>
+    <center> Logout the chat Page <a href = "{% url 'account_logout' %}" onclick="return confirm('Do you want to logout?')">Logout</a></center>
     {% endif %}
     <div
       class="chat__item__container"
